# zerotier-gui

./: .gitignore  README.md  make_deb.sh  pyproject.toml  requirements.txt
flatpak/: build-flatpak.sh  org.zerotier.ZeroTierGUI.yml  prepare-wheels.sh
flatpak/wheels/: pyqt6_sip-13.11.1-cp311-cp311-manylinux1_x86_64.manylinux_2_5_x86_64.whl
packaging/: zerotier-gui.desktop
packaging/flatpak/: org.zerotier.ZeroTierGUI.desktop  org.zerotier.ZeroTierGUI.metainfo.xml
zerotier_gui/: api.py  autostart.py  main.py  network_store.py  service.py  tray_app.py
zerotier_gui/ui/: dialogs.py  networks_window.py
