[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerotier-gui"
version = "0.1.6"
description = "Tray-only ZeroTier GUI for Linux (macOS client replica)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "PyQt6>=6.6.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.5.0", "black>=24.0.0"]

[project.scripts]
zerotier-gui = "zerotier_gui.main:main"

[tool.setuptools]
package-dir = {"" = "."}

